# camel-8

./: .envrc  .gitignore  README.md  camel8.opam  dune-project  flake.nix  project.org  tracking.org
lib/: binary.ml  binary.mli  caml8.ml  cpu.ml  cpu.mli  decode.ml  decode.mli  dune  emu.ml  font.ml  instructions.ml  instructions.mli  memory.ml  memory.mli  register.ml  register.mli  timer.ml  timer.mli
lib/common/: addressable_intf.ml
lib/cpu/: cpu.ml  cpu.mli  decode.ml  decode.mli  disassemble.ml  disassemble.mli  register.ml  register.mli
lib/display/: display.ml  display.mli
lib/memory/: memory.ml  memory.mli
lib/timer/: timer.ml  timer.mli
lib/ui/: gui.ml  tui.ml  tui.mli
lib/util/: binary.ml  binary.mli  hex.ml  io.ml  pretty.ml
opam/: camel8.opam
test/: dune  test_disassemble.ml  test_lib_binary.ml
