(library
 (name camel8)
 (libraries stdint ppx_deriving unix)
 (preprocess (pps ppx_deriving.show)))

(include_subdirs unqualified)

(env
 (dev
  (flags
   (:standard
     -warn-error -A ;; warnings are not errors
     -w -69         ;; disable unused field
     -w -32         ;; disable unused value declaration
     -w -27         ;; disable unused variable
))))
